# pi

./: CMakeLists.txt  run
c1/: doskonale.c  przyjazn.c  stopnie.c
c10/: ring.c  semi.c
c2/: fibo.c  perf.c  primes.c
c3/: half.c  narc.c  weight.c
c4/: min.c  pri.c
c5/: fact.c  merge.c  neigh.c
c6/: field.c  spiral.c  square.c
c7/: rec.c  rom.c  tri.c
c8/: bin.c  seq.c  stamp.c
c9/: last.c  odd.c  seq.c
